# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  auteur  rtv1  scene1.rt  scene2.rt  scene3.rt  scene4.rt
incs/: .types.h.swp  anti_alias.h  camera.h  drawer.h  ellipse.h  error.h  event.h  intersection.h  light.h  m4.h  math_utilities.h  norm_obj.h  obj_normal.h  parser.h  perlin.h  pixel.h  raytracer.h  rtv1.h  rtv1.h~  types.h  vector_rotate.h  vector_utilities.h  vector_utility.h
libft/: CMakeLists.txt  Makefile  ft_atod.c  ft_atoi.c  ft_atoi_base.c  ft_count_words.c  ft_degtorad.c  ft_deltab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnegative.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_print_words_tables.c  ft_putendl.c  ft_putnbr.c  ft_putstr.c  ft_radtodeg.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+26 more)
minilibx_macos/: CMakeLists.txt
ressources/: black_hole_interstellar.xpm  light_off_1.xpm  light_off_2.xpm  light_on_1.xpm  light_on_2.xpm  shadow_off_1.xpm  shadow_off_2.xpm  shadow_on_1.xpm  shadow_on_2.xpm
scenes/: scene1-2.rt  scene1.rt  scene1.rt~  scene10.rt  scene11.rt  scene12.rt  scene13.rt  scene14.rt  scene2.rt  scene3.rt  scene4.rt  scene5.rt  scene6.2.rt  scene6.rt  scene7.rt  scene8.2.rt  scene8.rt  scene9.rt  sceneRT-2.rt  sceneRT-3.rt  sceneRT-5.rt  scene_hyper.rt  scenefile_type.rt
srcs/: #light_phong_shading.c#  (+48 more)
